# python-mtn-momo-gateway

./: .gitignore  README.md  pyproject.toml  setup.py
momogateway/: momogateway.py
